Misc and bug fix: 1.  Fix the toggleFavouriteClass bug in favourite classes view, where     the wrong value is used as classID for the toggling. 2.  Adds global CSS to remove scrollbar if any on all platforms. 3.  Adds todos to Login view.

--- a/app/public/index.css
+++ b/app/public/index.css
@@ -13,3 +13,25 @@ body {
 body.modal-opened {
   overflow: hidden;
 }
+
+html {
+  /* @todo Test this out as this is not supported on all platforms */
+  scroll-behavior: smooth;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+  display: none;
+  /* remove scrollbar space */
+  width: 0px;
+  /* optional: just make scrollbar invisible */
+  background: transparent;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+body {
+  /* IE and Edge */
+  -ms-overflow-style: none;
+  /* Firefox */
+  scrollbar-width: none;
+}
